fix: source ip filter label align

--- a/src/components/Connections.css
+++ b/src/components/Connections.css
@@ -3,7 +3,7 @@
 }
 
 .react-tabs__tab-list {
-  margin: 0 0 10px;
+  margin: 0px;
   padding: 0 30px;
 }
 
