--- a/src/components/Connections.module.scss
+++ b/src/components/Connections.module.scss
@@ -65,3 +65,8 @@
   transition: border-color 0.2s cubic-bezier(0.645, 0.045, 0.355, 1);
   width: 100%;
 }
+
+.sourceipContainer {
+  display: flex;
+  align-items: center;
+}
